[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
windows = {version= "0.61.3", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]}
