[package]
name = "any-crosshair"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
image = "0.25"
windows = {version= "0.61", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
]}
